# semv-py

./: .gitignore  CODEX_ANALYSIS.txt  CODEX_RESULTS.txt  CODEX_REVIEW_SNIPPETS.md  META_PROCESS.md  Makefile  README.md  REVIEW_FINDINGS.md  TASKS.txt  logo.txt  pyproject.toml
.analysis/: consolidated_wisdom.txt  technical_debt.txt
.github/workflows/: quick-check.yml  test.yml
docs/: DEVELOPMENT.md  GETTING_STARTED.md  INSTALL.md  TASKS.md
docs/archive/sessions/oct-26/: DONE.md  ROADMAP.md
docs/archive/sessions/sept-oct/: codex_review_summary.md  feature_gap_analysis.md
docs/lics/: LICENSE_COMMERCIAL.txt  LICENSE_COMMUNITY.txt  LICENSE_OVERVIEW.txt  TRADEMARKS
docs/misc/: session_2025_10_20_summary.md
docs/procs/: CONTINUE.md  DONE.md  PROCESS.md  QUICK_REF.md  ROADMAP.md  SPRINT.md  TASKS.md
docs/ref/: DEPLOYMENT.md  VERSION_STRAT.md  pypi_publishing_guide.md  semv_concepts.md
docs/ref/detection/: detection_buildout_plan.md  detection_strategy.md  shared_detection_library_plan.md
docs/ref/detection/code_ref/: batch_helpers_module.py  projectrc_config_module.py  tooling_detection_module.py  workspace_detection_module.py
docs/ref/integration/blade/: blade_semv_integration_contract_adapter.md  blade_semv_integration_guidance.md
docs/ref/integration/boxy/: BOXY_INTEGRATION.md  BOXY_README.md  boxy_python_integration_strategies.md
docs/ref/integration/gitsim/: GITSIM_README.md  gitsim.sh
docs/ref/plan/: SEMV_LEGACY_README.md  semv.sh  semv_prd.md  semv_python_buildout_plan.md  semv_roadmap.md  semv_tasks.txt
scripts/: setup-dev.sh
src/semvx/: __init__.py
src/semvx/cli/: __init__.py  main.py
src/semvx/core/: __init__.py  build_info.py  commit_analyzer.py  file_writer.py  git_ops.py  repository_status.py  version.py
src/semvx/detection/: __init__.py  detector.py  foundations.py  manifests.py  reporting.py  types.py  version.py
src/semvx/integrations/: __init__.py  boxy.py  rolo.py
tests/: conftest.py  run_tests.py
tests/unit/: test_build_info.py  test_cli.py  test_commit_analyzer.py  test_detection.py  test_file_writer.py  test_git_ops.py  test_manifests.py  test_reporting.py  test_semantic_version.py
